--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Agrega el manejo de autenticación. -->
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js">
   </script>
-  <script src="js/init.js"></script>
+  <script src="init.js"></script>
 </head>
 
 <body>
